--- a/config/storage.yml
+++ b/config/storage.yml
@@ -10,6 +10,8 @@ amazon:
   service: S3
   access_key_id: ""
   secret_access_key: ""
+  region: ""
+  bucket: ""
 
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
