--- a/config/storage.yml
+++ b/config/storage.yml
@@ -8,7 +8,7 @@ local:
 
 amazon:
   service: S3
-  AWS_ACCESS_KEY_ID: ENV["AWS_ACCESS_KEY_ID"],
+  AWS_ACCESS_KEY_ID: ENV["AWS_ACCESS_KEY_ID"]
   AWS_SECRET_ACCESS_KEY: ENV["AWS_SECRET_ACCESS_KEY"]
   region: "ap-northeast-1a"
   bucket: "freemarket-sample-49a"
