--- a/config/storage.yml
+++ b/config/storage.yml
@@ -10,8 +10,8 @@ amazon:
   service: S3
   # access_key_id: ENV["AWS_ACCESS_KEY_ID"]
   # secret_access_key: ENV["AWS_SECRET_ACCESS_KEY"]
-  access_key_id: <%= Rails.application.credentials.access_key_id %>
-  secret_access_key: <%= Rails.application.credentials.secret_access_key %>
+  access_key_id: <%= Rails.application.credentials.aws_access_key_id %>
+  secret_access_key: <%= Rails.application.credentials.aws_secret_access_key %>
   region: "ap-northeast-1a"
   bucket: "freemarket-sample-49a"
 
